angular hammer js added

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,5 @@
 
-	<div id="one" class="main-block exclusive-gifts" ng-click="goToExclusiveGifts()">
+	<div id="one" class="main-block exclusive-gifts" >
 		<h1>{{main.data.exclusiveGifts}}</h1>
 		<h4>exclusive gifts</h4>
 	</div>
