--- a/css/style.css
+++ b/css/style.css
@@ -3,24 +3,29 @@ body {
   padding: 0;
   background-color: #000000;
   color: #ffffff;
-  font-family: "Lato", sans-serif; }
+  font-family: "Lato", sans-serif;
+}
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 h1 {
   font-weight: 300;
   font-size: 48px;
   line-height: 58px;
-  text-align: center; }
+  text-align: center;
+}
 
 h4 {
   font-weight: 900;
   font-size: 18px;
   line-height: 32px;
-  text-align: center; }
+  text-align: center;
+  letter-spacing: 0.05em;
+}
 
 .main-block {
   width: 50%;
@@ -34,7 +39,8 @@ h4 {
   box-shadow: inset 0 1px 0px rgba(255, 255, 255, 0.4);
   -webkit-transition: all 0.5s ease-in;
   -o-transition: all 0.5s ease-in;
-  transition: all 0.5s ease-in; }
+  transition: all 0.5s ease-in;
+}
 
 #one {
   left: 0;
@@ -44,7 +50,8 @@ h4 {
   -moz-transform-origin: 0% 0%;
   -ms-transform-origin: 0% 0%;
   -o-transform-origin: 0% 0%;
-  transform-origin: 0% 0%; }
+  transform-origin: 0% 0%;
+}
 
 #two {
   right: 0;
@@ -54,7 +61,8 @@ h4 {
   -moz-transform-origin: 100% 0%;
   -ms-transform-origin: 100% 0%;
   -o-transform-origin: 100% 0%;
-  transform-origin: 100% 0%; }
+  transform-origin: 100% 0%;
+}
 
 #three {
   left: 0;
@@ -64,7 +72,8 @@ h4 {
   -moz-transform-origin: 0% 100%;
   -ms-transform-origin: 0% 100%;
   -o-transform-origin: 0% 100%;
-  transform-origin: 0% 100%; }
+  transform-origin: 0% 100%;
+}
 
 #four {
   right: 0;
@@ -74,18 +83,22 @@ h4 {
   -moz-transform-origin: 100% 100%;
   -ms-transform-origin: 100% 100%;
   -o-transform-origin: 100% 100%;
-  transform-origin: 100% 100%; }
+  transform-origin: 100% 100%;
+}
 
 .detail-page .main-block {
   width: 0%;
-  height: 0%; }
+  height: 0%;
+}
 
 .detail-page .main-block.active {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+}
 
 .main-block h1 {
-  margin-top: 60px; }
+  margin-top: 60px;
+}
 
 .main-block.exclusive-gifts h1::before {
   content: "\e017";
@@ -101,7 +114,8 @@ h4 {
   -moz-osx-font-smoothing: grayscale;
   line-height: 60px;
   font-size: 52px;
-  display: block; }
+  display: block;
+}
 
 .main-block.my-recycles h1::before {
   content: "\e03e";
@@ -117,7 +131,8 @@ h4 {
   -moz-osx-font-smoothing: grayscale;
   line-height: 60px;
   font-size: 52px;
-  display: block; }
+  display: block;
+}
 
 .main-block.nearby-gifts h1::before {
   content: "\e025";
@@ -133,7 +148,8 @@ h4 {
   -moz-osx-font-smoothing: grayscale;
   line-height: 60px;
   font-size: 52px;
-  display: block; }
+  display: block;
+}
 
 .main-block.new-recycles h1::before {
   content: "\e012";
@@ -149,4 +165,5 @@ h4 {
   -moz-osx-font-smoothing: grayscale;
   line-height: 60px;
   font-size: 52px;
-  display: block; }
+  display: block;
+}
