--- a/templates/my-recycles.html
+++ b/templates/my-recycles.html
@@ -1,15 +1,15 @@
-<!-- exclusive gift -->
-<div class="view exclusive-gifts">
+<!-- my recycles -->
+<div class="view my-recycles">
 	<header>
-		<h2>exclusive gifts</h2>
+		<h2>my recycles</h2>
 	</header>
 	<div class="main">
 		
 	</div>
 	<footer>
-		<div class="button exclusive-gifts active" 
+		<div class="button exclusive-gifts" 
 		ng-click="setPage('exclusive')"></div>
-		<div class="button my-recycles"
+		<div class="button my-recycles active"
 		ng-click="setPage('mine')"></div>
 		<div class="button nearby-gifts"
 		ng-click="setPage('nearby')"></div>
