--- a/templates/nearby-gifts.html
+++ b/templates/nearby-gifts.html
@@ -1,17 +1,17 @@
-<!-- exclusive gift -->
-<div class="view exclusive-gifts">
+<!-- nearby-gifts.html -->
+<div class="view nearby-gifts">
 	<header>
-		<h2>exclusive gifts</h2>
+		<h2>nearby gifts</h2>
 	</header>
 	<div class="main">
 		
 	</div>
 	<footer>
-		<div class="button exclusive-gifts active" 
+		<div class="button exclusive-gifts" 
 		ng-click="setPage('exclusive')"></div>
 		<div class="button my-recycles"
 		ng-click="setPage('mine')"></div>
-		<div class="button nearby-gifts"
+		<div class="button nearby-gifts active"
 		ng-click="setPage('nearby')"></div>
 		<div class="button new-recycles"
 		ng-click="setPage('new')"></div>
