--- a/templates/new-recycle.html
+++ b/templates/new-recycle.html
@@ -1,19 +1,19 @@
-<!-- exclusive gift -->
-<div class="view exclusive-gifts">
+<!-- new-recycle.html -->
+<div class="view new-recycles">
 	<header>
-		<h2>exclusive gifts</h2>
+		<h2>post new recycles</h2>
 	</header>
 	<div class="main">
 		
 	</div>
 	<footer>
-		<div class="button exclusive-gifts active" 
+		<div class="button exclusive-gifts" 
 		ng-click="setPage('exclusive')"></div>
 		<div class="button my-recycles"
 		ng-click="setPage('mine')"></div>
 		<div class="button nearby-gifts"
 		ng-click="setPage('nearby')"></div>
-		<div class="button new-recycles"
+		<div class="button new-recycles active"
 		ng-click="setPage('new')"></div>
 	</footer>
 </div>
