--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,9 @@ $red: #FF0453;
 $yellow: #FFC100;
 $purple: #885E74;
 $green: #03C796;
+
+$headerHeight : 60px;
+$footerHeight : 60px;
 @mixin icomoon($content) {
 	content: $content;
   	font-family: 'icomoon';
@@ -11,7 +14,6 @@ $green: #03C796;
 	font-weight: normal;
 	font-variant: normal;
 	text-transform: none;
-	line-height: 1;
 
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
@@ -132,4 +134,82 @@ h4 {
 	line-height: 60px;
 	font-size: 52px;
 	display: block;
+}
+/********************view ****************/
+.view {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	box-sizing: border-box;
+	border-radius: 8px;
+	position: absolute;
+	border: solid 2px rgba(0,0,0,1);
+	-webkit-box-shadow: inset 0 1px 0px rgba(255,255,255,0.3);
+	box-shadow: inset 0 1px 0px rgba(255,255,255,0.3);
+	&.exclusive-gifts {
+		background-color: $red;
+	}
+	&.my-recycles {
+		background-color: $green;
+	}
+	&.nearby-gifts {
+		background-color: $purple;
+	}
+	&.new-recycles {
+		background-color: $yellow;
+	}
+	header {
+		height: $headerHeight; 
+		h2 {
+			font-weight: 900;
+			font-size: 24px;
+			line-height: $headerHeight;
+			padding-left: 20px;
+		}
+	}
+	.main {
+		position: absolute;
+		margin: 0;
+		top: $headerHeight;
+		bottom: $footerHeight;
+		left: 0;
+		right: 0;
+		background-color: rgba(0,0,0,0.2);
+	}
+	footer {
+		position: absolute;
+		bottom: 0;
+		width: 100%;
+		.button {
+			width: 25%;
+			float: left;
+			height: $footerHeight;
+			cursor: pointer;
+		}
+		.button::before {
+			font-size: 40px;
+			line-height: $footerHeight;
+			text-align: center;
+			display: block;
+			-webkit-text-shadow: 0 0 8px rgba(255,255,255,.6);
+			-moz-text-shadow: 0 0 8px rgba(255,255,255,.6);
+			text-shadow: 0 0 8px rgba(255,255,255,.6);
+			opacity: 0.6;
+		}
+		.button.active::before {
+			opacity: 1;
+		}
+		.button.exclusive-gifts::before {
+			@include icomoon('\e017');
+		}
+		.button.my-recycles::before {
+			@include icomoon('\e03e');
+		}
+		.button.nearby-gifts::before {
+			@include icomoon('\e025');
+		}
+		.button.new-recycles::before {
+			@include icomoon('\e012');
+		}
+	}
 }
