--- a/templates/main.html
+++ b/templates/main.html
@@ -2,7 +2,7 @@
 	<div id="one" class="main-block exclusive-gifts" 
 		ng-click="setPage('exclusive')">
 		<h1>{{main.data.exclusiveGifts}}</h1>
-		<h4>exclusive gifts</h4>
+		<h4>exclusive gifts{{callout}}</h4>
 	</div>
 	<div id="two" class="main-block my-recycles"
 		ng-click="setPage('mine')">
