--- a/templates/my-recycles.html
+++ b/templates/my-recycles.html
@@ -1,10 +1,11 @@
 <!-- my recycles -->
 <div class="view my-recycles">
 	<header>
-		<h2>my recycles</h2>
+		<h2>my recycles	</h2>
+		<div class="menu"><i></i></div>
 	</header>
 	<div class="main">
-		
+			
 	</div>
 	<footer>
 		<div class="button exclusive-gifts" 
