--- a/templates/nearby-gifts.html
+++ b/templates/nearby-gifts.html
@@ -2,9 +2,10 @@
 <div class="view nearby-gifts">
 	<header>
 		<h2>nearby gifts</h2>
+		<div class="menu"><i></i></div>
 	</header>
 	<div class="main">
-		
+
 	</div>
 	<footer>
 		<div class="button exclusive-gifts" 
