--- a/templates/new-recycle.html
+++ b/templates/new-recycle.html
@@ -2,6 +2,7 @@
 <div class="view new-recycles">
 	<header>
 		<h2>post new recycles</h2>
+		<div class="menu"><i></i></div>
 	</header>
 	<div class="main">
 		
