--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,34 @@ h4 {
   font-size: 24px;
   line-height: 60px;
   padding-left: 20px; }
+.view header .menu {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 60px;
+  height: 60px;
+  cursor: pointer; }
+.view header .menu i {
+  position: absolute;
+  width: 24px;
+  height: 4px;
+  top: 28px;
+  right: 16px;
+  background-color: #ffffff; }
+.view header .menu i::before {
+  content: '';
+  position: absolute;
+  width: 24px;
+  height: 4px;
+  top: -10px;
+  background-color: #ffffff; }
+.view header .menu i::after {
+  content: '';
+  position: absolute;
+  width: 24px;
+  height: 4px;
+  top: 10px;
+  background-color: #ffffff; }
 .view .main {
   position: absolute;
   margin: 0;
