--- a/templates/exclusive-gifts.html
+++ b/templates/exclusive-gifts.html
@@ -2,6 +2,7 @@
 <div class="view exclusive-gifts">
 	<header>
 		<h2>exclusive gifts</h2>
+		<div class="menu"><i></i></div>
 	</header>
 	<div class="main">
 		
