--- a/templates/main.html
+++ b/templates/main.html
@@ -1,21 +1,21 @@
 <!-- main.html -->
 	<div id="one" class="main-block exclusive-gifts" 
-		ng-click="setPage('exclusive')">
+		ng-click="setPage('view.exclusive')">
 		<h1>{{main.data.exclusiveGifts}}</h1>
 		<h4>exclusive gifts{{callout}}</h4>
 	</div>
 	<div id="two" class="main-block my-recycles"
-		ng-click="setPage('mine')">
+		ng-click="setPage('view.mine')">
 		<h1>{{main.data.myRecycles}}</h1>
 		<h4>my recycles</h4>
 	</div>
 	<div id="three" class="main-block nearby-gifts"
-		ng-click="setPage('nearby')">
+		ng-click="setPage('view.nearby')">
 		<h1>{{main.data.nearbyGifts}}</h1>
 		<h4>nearby gifts</h4>
 	</div>
 	<div id="four" class="main-block new-recycles"
-		ng-click="setPage('new')">
+		ng-click="setPage('view.new')">
 		<h1>+</h1>
 		<h4>new recycles</h4>
 	</div>
