--- a/templates/exclusive-gifts.html
+++ b/templates/exclusive-gifts.html
@@ -1,24 +1,20 @@
 <!-- exclusive gift -->
-<div class="view exclusive-gifts">
-	<div class="viewWrapper">		
-		<header>
-			<h2>exclusive gifts</h2>
-			<div class="menu"><i></i></div>
-		</header>
-		<div class="main">
+<div class="view-wrapper exclusive-gifts" ng-class="{'menu-active': view.menuActive}">		
+	<header>
+		<h2>exclusive gifts</h2>
+		<div class="menu" ng-click="view.menuActive = !view.menuActive"><i></i></div>
+	</header>
+	<div class="main">
 			
-		</div>
-		<footer>
-			<div class="button exclusive-gifts active" 
-			ng-click="setPage('exclusive')"></div>
-			<div class="button my-recycles"
-			ng-click="setPage('mine')"></div>
-			<div class="button nearby-gifts"
-			ng-click="setPage('nearby')"></div>
-			<div class="button new-recycles"
-			ng-click="setPage('new')"></div>
-		</footer>
 	</div>
-    <div ui-view="menu">
-    </div>
+	<footer>
+		<div class="button exclusive-gifts active" 
+		ng-click="setPage('view.exclusive')"></div>
+		<div class="button my-recycles"
+		ng-click="setPage('view.mine')"></div>
+		<div class="button nearby-gifts"
+		ng-click="setPage('view.nearby')"></div>
+		<div class="button new-recycles"
+		ng-click="setPage('view.new')"></div>
+	</footer>
 </div>
