--- a/templates/new-recycle.html
+++ b/templates/new-recycle.html
@@ -1,20 +1,20 @@
 <!-- new-recycle.html -->
-<div class="view new-recycles">
+<div class="view-wrapper new-recycles" ng-class="{'menu-active': view.menuActive}">		
 	<header>
 		<h2>post new recycles</h2>
-		<div class="menu"><i></i></div>
+		<div class="menu" ng-click="view.menuActive = !view.menuActive"><i></i></div>
 	</header>
 	<div class="main">
-		
+			
 	</div>
 	<footer>
 		<div class="button exclusive-gifts" 
-		ng-click="setPage('exclusive')"></div>
+		ng-click="setPage('view.exclusive')"></div>
 		<div class="button my-recycles"
-		ng-click="setPage('mine')"></div>
+		ng-click="setPage('view.mine')"></div>
 		<div class="button nearby-gifts"
-		ng-click="setPage('nearby')"></div>
+		ng-click="setPage('view.nearby')"></div>
 		<div class="button new-recycles active"
-		ng-click="setPage('new')"></div>
+		ng-click="setPage('view.new')"></div>
 	</footer>
 </div>
