--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'icomoon';
+  src: url("../fonts/icomoon.eot?l5ockb");
+  src: url("../fonts/icomoon.eot?#iefixl5ockb") format("embedded-opentype"), url("../fonts/icomoon.woff?l5ockb") format("woff"), url("../fonts/icomoon.ttf?l5ockb") format("truetype"), url("../fonts/icomoon.svg?l5ockb#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal; }
 body {
   margin: 0;
   padding: 0;
@@ -154,17 +160,22 @@ h4 {
   height: 100%;
   overflow: hidden;
   box-sizing: border-box;
-  border-radius: 8px;
   position: absolute;
-  border: solid 2px black;
-  -webkit-box-shadow: inset 0 1px 0px rgba(255, 255, 255, 0.3);
-  box-shadow: inset 0 1px 0px rgba(255, 255, 255, 0.3); }
+  border: solid 2px black; }
 .view .view-wrapper {
   position: absolute;
   width: 100%;
   height: 100%;
+  border-radius: 8px;
+  -webkit-box-shadow: inset 0 1px 0px rgba(255, 255, 255, 0.6);
+  box-shadow: inset 0 1px 0px rgba(255, 255, 255, 0.6);
+  -webkit-transition: all 0.3s ease-in;
+  -o-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in; }
 .view .view-wrapper.menu-active {
+  -webkit-transform: translateX(-75%);
+  -ms-transform: translateX(-75%);
+  -o-transform: translateX(-75%);
   transform: translateX(-75%); }
 .view .view-wrapper.exclusive-gifts {
   background-color: #ff0453; }
@@ -195,6 +206,8 @@ h4 {
   top: 28px;
   right: 16px;
   background-color: #ffffff;
+  -webkit-transition: all 0.3s ease-in;
+  -o-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in; }
 .view header .menu i::before {
   content: '';
@@ -203,6 +216,8 @@ h4 {
   height: 4px;
   top: -10px;
   background-color: #ffffff;
+  -webkit-transition: all 0.3s ease-in;
+  -o-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in; }
 .view header .menu i::after {
   content: '';
@@ -211,15 +226,23 @@ h4 {
   height: 4px;
   top: 10px;
   background-color: #ffffff;
+  -webkit-transition: all 0.3s ease-in;
+  -o-transition: all 0.3s ease-in;
   transition: all 0.3s ease-in; }
 .view header .menu.menu-active i {
   background-color: rgba(255, 255, 255, 0); }
 .view header .menu.menu-active i::before {
   top: 0;
-  transform: rotate(-45deg); }
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg); }
 .view header .menu.menu-active i::after {
   top: 0;
-  transform: rotate(45deg); }
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg); }
 .view .main {
   position: absolute;
   margin: 0;
@@ -293,6 +316,11 @@ h4 {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
+#activity-map {
+  position: absolute;
+  width: 100%;
+  height: 100%; }
+
 /********************view.menu ****************/
 .menu-wrapper {
   position: absolute;
@@ -300,6 +328,14 @@ h4 {
   height: 100%;
   left: 100%;
   background-color: #333333;
+  border-radius: 8px;
+  -webkit-box-shadow: inset 0 1px 0px rgba(255, 255, 255, 0.3);
+  box-shadow: inset 0 1px 0px rgba(255, 255, 255, 0.3);
+  padding: 0 20px;
+  box-sizing: border-box;
   transition: all 0.3s ease-in; }
 .menu-wrapper.menu-active {
+  -webkit-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  -o-transform: translateX(-100%);
   transform: translateX(-100%); }
