--- a/css/style.scss
+++ b/css/style.scss
@@ -22,6 +22,16 @@ $animation: 0.3s;
 	-moz-osx-font-smoothing: grayscale;
 }
 
+@font-face {
+	font-family: 'icomoon';
+	src:url('../fonts/icomoon.eot?l5ockb');
+	src:url('../fonts/icomoon.eot?#iefixl5ockb') format('embedded-opentype'),
+		url('../fonts/icomoon.woff?l5ockb') format('woff'),
+		url('../fonts/icomoon.ttf?l5ockb') format('truetype'),
+		url('../fonts/icomoon.svg?l5ockb#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
 body {
 	margin: 0;
 	padding: 0;
@@ -143,17 +153,22 @@ h4 {
 	height: 100%;
 	overflow: hidden;
 	box-sizing: border-box;
-	border-radius: 8px;
 	position: absolute;
 	border: solid 2px rgba(0,0,0,1);
-	-webkit-box-shadow: inset 0 1px 0px rgba(255,255,255,0.3);
-	box-shadow: inset 0 1px 0px rgba(255,255,255,0.3);
 	.view-wrapper {
 		position: absolute;
 		width: 100%;
 		height: 100%;
+		border-radius: 8px;
+		-webkit-box-shadow: inset 0 1px 0px rgba(255,255,255,0.6);
+		box-shadow: inset 0 1px 0px rgba(255,255,255,0.6);
+		-webkit-transition: all $animation ease-in;
+		-o-transition: all $animation ease-in;
 		transition: all $animation ease-in;
 		&.menu-active {
+			-webkit-transform: translateX(-75%);
+			-ms-transform: translateX(-75%);
+			-o-transform: translateX(-75%);
 			transform: translateX(-75%);
 		}
 		&.exclusive-gifts {
@@ -193,6 +208,8 @@ h4 {
 				top: 28px;
 				right: 16px;
 				background-color: #ffffff;
+				-webkit-transition: all $animation ease-in;
+				-o-transition: all $animation ease-in;
 				transition: all $animation ease-in;
 			}
 			i::before {
@@ -202,6 +219,8 @@ h4 {
 				height: 4px;
 				top: -10px;
 				background-color: #ffffff;
+				-webkit-transition: all $animation ease-in;
+				-o-transition: all $animation ease-in;
 				transition: all $animation ease-in;
 			}
 			i::after {
@@ -211,6 +230,8 @@ h4 {
 				height: 4px;
 				top: 10px;
 				background-color: #ffffff;
+				-webkit-transition: all $animation ease-in;
+				-o-transition: all $animation ease-in;
 				transition: all $animation ease-in;
 			}
 		}
@@ -220,11 +241,17 @@ h4 {
 			}
 			i::before {
 				top: 0;
-				transform: rotate(-45deg);
+				-webkit-transform: rotate(45deg);
+				-ms-transform: rotate(45deg);
+				-o-transform: rotate(45deg);
+				transform: rotate(45deg);
 			}
 			i::after {
 				top: 0;
-				transform: rotate(45deg);
+				-webkit-transform: rotate(-45deg);
+				-ms-transform: rotate(-45deg);
+				-o-transform: rotate(-45deg);
+				transform: rotate(-45deg);
 			}
 		}
 	}
@@ -274,7 +301,11 @@ h4 {
 		}
 	}
 }
-
+#activity-map {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
 /********************view.menu ****************/
 .menu-wrapper {
 	position: absolute;
@@ -282,8 +313,16 @@ h4 {
 	height: 100%;
 	left: 100%;
 	background-color: #333333;
+	border-radius: 8px;
+	-webkit-box-shadow: inset 0 1px 0px rgba(255,255,255,0.3);
+	box-shadow: inset 0 1px 0px rgba(255,255,255,0.3);
+	padding: 0 20px;
+	box-sizing: border-box;
 	transition: all $animation ease-in;
 	&.menu-active {
+		-webkit-transform: translateX(-100%);
+		-ms-transform: translateX(-100%);
+		-o-transform: translateX(-100%);
 		transform: translateX(-100%);
 	}
 }
