--- a/templates/view.html
+++ b/templates/view.html
@@ -1,7 +1,4 @@
 <div class="view">
 	<div ui-view></div>
-    <div ui-view="menu" class="menu-wrapper" ng-class="{'menu-active': view.menuActive}">
-    	view menu
-    	<input type="checkbox" name="" id="">
-    </div>
+    <div ui-view="menu" class="menu-wrapper" ng-class="{'menu-active': view.menuActive}"></div>
 </div>
