--- a/templates/exclusive-gifts.html
+++ b/templates/exclusive-gifts.html
@@ -1,7 +1,7 @@
 <!-- exclusive gift -->
 <div class="view-wrapper exclusive-gifts" ng-class="{'menu-active': view.menuActive}">
 	<header>
-		<h2>exclusive gifts</h2>
+		<h2 ng-click="setPage('main')">exclusive gifts</h2>
 		<div class="menu" 
 			ng-class="{'menu-active': view.menuActive}" 
 			ng-click="view.menuActive = !view.menuActive"><i></i></div>
