--- a/templates/my-recycles.html
+++ b/templates/my-recycles.html
@@ -1,7 +1,7 @@
 <!-- my recycles -->
 <div class="view-wrapper my-recycles" ng-class="{'menu-active': view.menuActive}">
 	<header>
-		<h2>my recycles	</h2>
+		<h2 ng-click="setPage('main')">my recycles	</h2>
 		<div class="menu" 
 			ng-class="{'menu-active': view.menuActive}" 
 			ng-click="view.menuActive = !view.menuActive"><i></i></div>
