--- a/templates/new-recycle.html
+++ b/templates/new-recycle.html
@@ -1,7 +1,7 @@
 <!-- new-recycle.html -->
 <div class="view-wrapper new-recycles" ng-class="{'menu-active': view.menuActive}">
 	<header>
-		<h2>post new recycles</h2>
+		<h2 ng-click="setPage('main')">post new recycles</h2>
 		<div class="menu" 
 			ng-class="{'menu-active': view.menuActive}" 
 			ng-click="view.menuActive = !view.menuActive"><i></i></div>
