--- a/templates/nearby-gifts.html
+++ b/templates/nearby-gifts.html
@@ -1,7 +1,7 @@
 <!-- nearby-gifts.html -->
 <div class="view-wrapper nearby-gifts" ng-class="{'menu-active': view.menuActive}">
 	<header>
-		<h2>nearby gifts</h2>
+		<h2 ng-click="setPage('main')">nearby gifts</h2>
 		<div class="menu" 
 			ng-class="{'menu-active': view.menuActive}" 
 			ng-click="view.menuActive = !view.menuActive"><i></i></div>
