--- a/templates/exclusive-gifts.html
+++ b/templates/exclusive-gifts.html
@@ -7,7 +7,29 @@
 			ng-click="view.menuActive = !view.menuActive"><i></i></div>
 	</header>
 	<div class="main">
-			
+		<div class="gift-wrapper">
+			<div class="gift">
+				<h1>Almost new sofa <a href="#">0.3 mi</a> away</h1>
+				<div class="swiper-container">
+					<div class="pagination"></div>
+					<div class="swiper-wrapper" style="width:2424px;">
+						<div class="swiper-slide">
+							<div class="inner">
+								<img src="../images/gallery-2.jpg" alt="">
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="inner">
+								<img src="../images/gallery-5.jpg" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+				<p class="description">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit eius atque aliquid ea voluptatem quis natus alias laudantium, illo vel?
+				</p>
+			</div>
+		</div>
 	</div>
 	<footer>
 		<div class="button exclusive-gifts active" 
